deploy on netlify

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!-- mobile menu - hamburger -->
             <a onclick="mobileMenu()" href="#/" class="icon"><i class="fas fa-bars fa-2x"></i></a>
             <ul>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#services">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#timeline">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -40,7 +40,7 @@
         <section id="hero">
             <div class="content">
                 <h1>Hello</h1>
-                <h2 class="hero">I'm a Web Designer & Frontend Developer from Helsinki, Finland.</h2>
+                <h2 class="hero">I'm a Web Designer & Frontend Developer</h2>
             </div>
             <div class="container hero-container">
                 <p class="about-text">Welcome to my portfolio website! I'm currently studying in Helsinki Business College to become a Full-stack Developer with focus on React & Node (I also got an MBA specializing in digital business solutions). Before I got into coding, I was living around the world and working mostly in different project management and customer service positions.
@@ -54,20 +54,20 @@
 <!-- services section cards -->
         <section id="services">
             <div class="container">
-                <h2>Services</h2>
+                <h2>About me</h2>
                 <h4>This is what I do</h4>
                 <div class="cards">
                     <div class="card" data-tilt>
-                        <img class="card-icon" src="img/glasses.png" alt="development">
-                        <h3>Development</h3>
-                        <p>I have a very customer-focused approach to web development and I understand the importance of good design. I started doing UX studies online in 2016 at Interaction Design Foundation. One thing led to another and I ended up doing my MBA on digital business solutions and continued to study Full Stack Web Development straight after. I'm still on that path and I'm so excited to take on new projects and learn about new technologies. Right now, my focus is in JavaScript & React and I'm also getting familiar with TypeScript.</p>
-                        <a href="#projects">Learn more in the projects section</a>
-                    </div>
-                    <div class="card" data-tilt>
                         <img class="card-icon" src="img/stache.png" alt="design">
                         <h3>Design</h3>
-                        <p>I've always been interested in arts. When I was in High School, I loved photography and I also developed my own photos in a darkroom. Back then I also learned more about Photoshop that I've now used for over 15 years. Some of my previous positions required daily use of Adobe Creative Cloud, especially when I was creating materials for event marketing campaigns. <a href="gallery.html">You can check out some of the materials here</a> (sorry, no mobile support for now). Lately, I've been focusing mainly on web design and I'm trying to learn more about best design practices on a daily basis.</p>
-                        <a href="#projects">Learn more in the projects section</a>
+                        <p>I've always been interested in arts. When I was in High School, I loved photography and I also developed my own photos in a darkroom. Back then I also learned more about Photoshop that I've now used for over 15 years. Some of my previous positions required daily use of Adobe Creative Cloud, especially when I was creating materials for event marketing campaigns. Lately, I've been focusing mainly on web design and I'm trying to learn more about best design practices on a daily basis.</p>
+                        <a href="gallery.html">Learn more</a>
+                    </div>
+                    <div class="card" data-tilt>
+                        <img class="card-icon" src="img/glasses.png" alt="development">
+                        <h3>Development</h3>
+                        <p>I have a very customer-focused approach to web development and I understand the importance of good design. I started doing UX studies online in 2016 at Interaction Design Foundation. One thing led to another and I ended up doing my MBA on digital business solutions and continued to study Full Stack Web Development straight after. I'm still on that path and I'm so excited to take on new projects and learn about new technologies. Right now, my focus is in JavaScript & React.</p>
+                        <a href="#projects">Learn more</a>
                     </div>
                 </div>
             </div>
@@ -247,7 +247,7 @@
                 </div>
             </div>
         </section>
-        <p class="copyright">Copyright &copy; Kalle Kekomaki 2020</p>
+        <p class="copyright">Copyright &copy; Kalle Kekomaki 2021</p>
     </footer>
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
