deployed on netlify

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                 <h2 class="hero">I'm a Web Designer & Frontend Developer</h2>
             </div>
             <div class="container hero-container">
-                <p class="about-text">Welcome to my portfolio website! I'm currently studying in Helsinki Business College to become a Full-stack Developer with focus on React & Node (I also got an MBA specializing in digital business solutions). Before I got into coding, I was living around the world and working mostly in different project management and customer service positions.
-                </p>
-                <p class="cv-text">If you want to keep your visit brief, here's my resume:</p>
+                <p class="about-text">Welcome to my portfolio website! I design by using Adobe Creative Cloud and Figma. I code mostly with HTML, CSS (Sass), JavaScript and React. If you'd like to know more, scroll down or contact me directly (info at the bottom of this page). If you want to keep your visit brief, here's my resume:</p>
                 <a class="btn" href="assets/kalle-kekomaki-cv2020.pdf" title="" download>Download CV</a>
             </div>
         </section>
